# finance-gpt

./: .env  .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt  test_imports.py
frontend/: README.md  __init__.py  main.py  rxconfig.py
frontend/components/: __init__.py  chat_interface.py  ui_components.py
frontend/core/: __init__.py  config.py  state_manager.py
frontend/frontend/: frontend.py  state.py
frontend/frontend/components/: hint.py  settings.py
frontend/frontend/views/: chat.py  templates.py
frontend/rag/: document_retriever.py  error_handling.py  llm_chain.py  model.py  rag_pipeline.py  utils.py  vector_search.py
frontend/utils/: __init__.py  formatters.py  ui_helpers.py  validators.py
notebook/: test.ipynb
rag/: db_scraper.py  document_retriever.py  llm_chain.py  model.py  vector_search.py
